--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,17 @@
 name: Daily Harvest
-
 on:
-  schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
-
+  schedule: [{cron: "0 0 * * *"}] # Midnight UTC
+  workflow_dispatch: # Allows manual trigger
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Setup Python
         uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Install Dependencies
+        with: {python-version: '3.9'}
+      - name: Install
         run: pip install arxiv gspread oauth2client pandas
-
-      - name: Execute Scraper
-        env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+      - name: Execute
+        env: {GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}}
         run: python bot.py
